--- a/Backend/RapidCart/RapidCart.API/RapidCart.API.csproj
+++ b/Backend/RapidCart/RapidCart.API/RapidCart.API.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <RootNamespace>RapidCart.Web</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
