--- a/Backend/RapidCart/RapidCart.API/RapidCart.API.csproj
+++ b/Backend/RapidCart/RapidCart.API/RapidCart.API.csproj
@@ -14,4 +14,9 @@
     <Folder Include="Controllers" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RapidCart.Core\RapidCart.Core.csproj" />
+    <ProjectReference Include="..\RapidCart.DAL\RapidCart.DAL.csproj" />
+  </ItemGroup>
+
 </Project>
