Cart working with api

--- a/Backend/RapidCart/RapidCart.API/RapidCart.API.csproj
+++ b/Backend/RapidCart/RapidCart.API/RapidCart.API.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\RapidCart.BLL\RapidCart.BLL.csproj" />
     <ProjectReference Include="..\RapidCart.Core\RapidCart.Core.csproj" />
     <ProjectReference Include="..\RapidCart.DAL\RapidCart.DAL.csproj" />
   </ItemGroup>
