Completed Add and Delete for items in frontend

--- a/Backend/RapidCart/RapidCart.DAL/appsettings.json
+++ b/Backend/RapidCart/RapidCart.DAL/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "RapidCart": "Server=localhost;Database=RapidCart;User Id=sa;Password=YOUR_strong_*pass4w0rd*;TrustServerCertificate=True;",
-    "RapidCartTest": "Server=localhost;Database=RapidCartTest;User Id=sa;Password=YOUR_strong_*pass4w0rd*;TrustServerCertificate=True;"
+    "RapidCart": "Server=localhost;Database=RapidCart;User Id=sa;Password=BadPass123;TrustServerCertificate=True;",
+    "RapidCartTest": "Server=localhost;Database=RapidCartTest;User Id=sa;Password=BadPass123;TrustServerCertificate=True;"
   }
 }
